# provider-agnostic-rag-agent

./: .env.example  .gitignore  DEMO_QUESTIONS.md  README.md  STAKEHOLDER_DEMO.md  pyproject.toml
backend/: main.py
backend/agents/: csv_agent.py  guardrails.py  orchestrator.py  rag_agent.py  router.py  sql_agent.py
backend/core/: config.py  data_sources.py  llm.py  logger.py  memory.py  tools.py
backend/scripts/: setup_data.py  test_qa.py  test_tools.py
frontend/: app.py
specs/: Mission.md  RoadMap.md  TechnicalSpecifications.md
